--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,15 +11,15 @@
 
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
+    #e4eef433 0deg,
+    #c7d6e4d9 55deg,
+    #f1fcfffe 120deg,
+    #cad7e8 160deg,
     transparent 360deg
   );
   --secondary-glow: radial-gradient(
     rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
+    rgba(251, 251, 251, 0.987)
   );
 
   --tile-start-rgb: 239, 245, 249;
@@ -46,11 +46,14 @@
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
+    --primary-glow: radial-gradient(
+      rgba(1, 65, 255, 0.4),
+      rgba(212, 216, 230, 0)
+    );
     --secondary-glow: linear-gradient(
       to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
+      rgba(204, 213, 231, 0),
+      rgba(212, 215, 223, 0),
       rgba(1, 65, 255, 0.3)
     );
 
@@ -62,7 +65,7 @@
       #ffffff30,
       #ffffff20,
       #ffffff10,
-      #ffffff10,
+      #f9f3f3,
       #ffffff80
     );
 
@@ -86,22 +89,22 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-family: "Arial", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
 }
+/* TO DO LEAH COME BACK HERE */
 
 a {
   color: inherit;
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   html {
-    color-scheme: dark;
+    color-scheme: light;
   }
 }
