--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -44,6 +44,7 @@
   grid-template-columns: repeat(4, minmax(25%, auto));
   max-width: 100%;
   width: var(--max-width);
+  background: url("./styles/iceGrid.png");
 }
 
 .card {
